tests/expectations/compiler/constants/constant_loop_bound.out
Error [ESAZ0374007]: Binary operation `241u8 + 15u8` failed at compile time: add overflow.
    --> compiler-test:19:17
     |
  19 |             c = c + i;
     |                 ^^^^^
